// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Graph should match snapshot 1`] = `
<DocumentFragment>
  <div
    class="echarts-for-react "
    size-sensor-id="1"
    style="height: 300px; position: relative;"
  >
    <div
      style="position: relative; overflow: hidden; width: 1280px; height: 800px;"
    >
      <svg
        baseProfile="full"
        height="800"
        style="position:absolute;left:0;top:0;user-select:none"
        version="1.1"
        width="1280"
        xmlns="http://www.w3.org/2000/svg"
        xmlns:xlink="http://www.w3.org/1999/xlink"
      >
        <rect
          fill="#F8F8FA"
          fill-opacity="1"
          height="800"
          id="0"
          width="1280"
          x="0"
          y="0"
        />
        <g>
          <path
            d=""
            fill="none"
            stroke="#ED1C24"
            stroke-opacity="0.5"
            stroke-width="2.2222222222222223"
          />
          <path
            d=""
            fill="none"
            stroke="#ACAEB0"
            stroke-opacity="0.5"
            stroke-width="2.2222222222222223"
          />
          <path
            d=""
            fill="none"
            stroke="#ACAEB0"
            stroke-opacity="0.5"
            stroke-width="2.2222222222222223"
          />
          <path
            d=""
            fill="none"
            stroke="#ACAEB0"
            stroke-opacity="0.5"
            stroke-width="2.2222222222222223"
          />
          <path
            d=""
            fill="none"
            stroke="#ACAEB0"
            stroke-opacity="0.5"
            stroke-width="2.2222222222222223"
          />
          <path
            d="M1 0A1 1 0 1 1 1 -0.0001"
            fill="#ACAEB0"
            fill-opacity="0"
            stroke="#FFFFFF"
            stroke-opacity="0"
            stroke-width="0"
          />
          <path
            d="M1 0A1 1 0 1 1 1 -0.0001"
            fill="#ACAEB0"
            fill-opacity="0"
            stroke="#FFFFFF"
            stroke-opacity="0"
            stroke-width="0"
          />
          <path
            d="M1 0A1 1 0 1 1 1 -0.0001"
            fill="#ACAEB0"
            fill-opacity="0"
            stroke="#FFFFFF"
            stroke-opacity="0"
            stroke-width="0"
          />
          <path
            d="M1 0A1 1 0 1 1 1 -0.0001"
            fill="#ED1C24"
            fill-opacity="0"
            stroke="#FFFFFF"
            stroke-opacity="0"
            stroke-width="0"
          />
          <path
            d="M1 0A1 1 0 1 1 1 -0.0001"
            fill="#ACAEB0"
            fill-opacity="0"
            stroke="#FFFFFF"
            stroke-opacity="0"
            stroke-width="0"
          />
          <path
            d="M1 0A1 1 0 1 1 1 -0.0001"
            fill="#ACAEB0"
            fill-opacity="0"
            stroke="#FFFFFF"
            stroke-opacity="0"
            stroke-width="0"
          />
          <path
            d="M1 0A1 1 0 1 1 1 -0.0001"
            fill="#ACAEB0"
            fill-opacity="0"
            stroke="#FFFFFF"
            stroke-opacity="0"
            stroke-width="0"
          />
          <path
            d="M1 0A1 1 0 1 1 1 -0.0001"
            fill="#ACAEB0"
            fill-opacity="0"
            stroke="#FFFFFF"
            stroke-opacity="0"
            stroke-width="0"
          />
          <path
            d="M1 0A1 1 0 1 1 1 -0.0001"
            fill="#ED1C24"
            fill-opacity="0"
            stroke="#FFFFFF"
            stroke-opacity="0"
            stroke-width="0"
          />
          <path
            d="M1 0A1 1 0 1 1 1 -0.0001"
            fill="#ACAEB0"
            fill-opacity="0"
            stroke="#FFFFFF"
            stroke-opacity="0"
            stroke-width="0"
          />
          <path
            d="M-5 -5l17 0l0 30l-17 0Z"
            fill="rgb(0,0,0)"
            fill-opacity="0"
            stroke="#ccc"
            stroke-width="0"
          />
          <path
            d="M0 0l7 0l0 20l-7 0Z"
            fill="none"
          />
          <text
            dominant-baseline="central"
            fill="#333333"
            style="font-size:14px;font-family:'Open Sans', sans-serif;font-weight:600;"
            text-anchor="start"
            transform="translate(20 20)"
            y="10"
          >
            Current
          </text>
        </g>
      </svg>
    </div>
    <div
      class=""
    />
    <object
      class="size-sensor-object"
      data="about:blank"
      style="display: block; position: absolute; top: 0px; left: 0px; height: 100%; width: 100%; overflow: hidden; pointer-events: none; z-index: -1; opacity: 0;"
      tabindex="-1"
      type="text/html"
    />
  </div>
</DocumentFragment>
`;

exports[`Graph should match snapshot when subtext is provided 1`] = `
<DocumentFragment>
  <div
    class="echarts-for-react "
    size-sensor-id="4"
    style="height: 300px; position: relative;"
  >
    <div
      style="position: relative; overflow: hidden; width: 1280px; height: 800px;"
    >
      <svg
        baseProfile="full"
        height="800"
        style="position:absolute;left:0;top:0;user-select:none"
        version="1.1"
        width="1280"
        xmlns="http://www.w3.org/2000/svg"
        xmlns:xlink="http://www.w3.org/1999/xlink"
      >
        <rect
          fill="#F8F8FA"
          fill-opacity="1"
          height="800"
          id="0"
          width="1280"
          x="0"
          y="0"
        />
        <g>
          <path
            d="M-5 -5l17 0l0 49l-17 0Z"
            fill="rgb(0,0,0)"
            fill-opacity="0"
            stroke="#ccc"
            stroke-width="0"
          />
          <path
            d="M0 0l7 0l0 20l-7 0Z"
            fill="none"
          />
          <text
            dominant-baseline="central"
            fill="#333333"
            style="font-size:14px;font-family:'Open Sans', sans-serif;font-weight:600;"
            text-anchor="start"
            transform="translate(20 20)"
            y="10"
          >
            Current
          </text>
          <path
            d="M0 23l7 0l0 16l-7 0Z"
            fill="none"
          />
          <text
            dominant-baseline="central"
            fill="#333333"
            style="font-size:12px;font-family:'Open Sans', sans-serif;font-weight:400;"
            text-anchor="start"
            transform="translate(20 20)"
            y="31"
          >
            Subtext
          </text>
        </g>
      </svg>
    </div>
    <div
      class=""
    />
    <object
      class="size-sensor-object"
      data="about:blank"
      style="display: block; position: absolute; top: 0px; left: 0px; height: 100%; width: 100%; overflow: hidden; pointer-events: none; z-index: -1; opacity: 0;"
      tabindex="-1"
      type="text/html"
    />
  </div>
</DocumentFragment>
`;

exports[`Graph should match snapshot when there are no nodes or links 1`] = `
<DocumentFragment>
  <div
    class="echarts-for-react "
    size-sensor-id="3"
    style="height: 300px; position: relative;"
  >
    <div
      style="position: relative; overflow: hidden; width: 1280px; height: 800px;"
    >
      <svg
        baseProfile="full"
        height="800"
        style="position:absolute;left:0;top:0;user-select:none"
        version="1.1"
        width="1280"
        xmlns="http://www.w3.org/2000/svg"
        xmlns:xlink="http://www.w3.org/1999/xlink"
      >
        <rect
          fill="#F8F8FA"
          fill-opacity="1"
          height="800"
          id="0"
          width="1280"
          x="0"
          y="0"
        />
        <g>
          <path
            d="M-5 -5l17 0l0 30l-17 0Z"
            fill="rgb(0,0,0)"
            fill-opacity="0"
            stroke="#ccc"
            stroke-width="0"
          />
          <path
            d="M0 0l7 0l0 20l-7 0Z"
            fill="none"
          />
          <text
            dominant-baseline="central"
            fill="#333333"
            style="font-size:14px;font-family:'Open Sans', sans-serif;font-weight:600;"
            text-anchor="start"
            transform="translate(20 20)"
            y="10"
          >
            Current
          </text>
        </g>
      </svg>
    </div>
    <div
      class=""
    />
    <object
      class="size-sensor-object"
      data="about:blank"
      style="display: block; position: absolute; top: 0px; left: 0px; height: 100%; width: 100%; overflow: hidden; pointer-events: none; z-index: -1; opacity: 0;"
      tabindex="-1"
      type="text/html"
    />
  </div>
</DocumentFragment>
`;
